# fast-api

./: .gitignore  README.md  config.py  main.py  models.py  pyproject.toml
frontend/public/: index.html
frontend/src/: App.js  TaglineSection.css  TaglineSection.js
